k8s/service-discovery/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-discovery
  labels:
    app: service-discovery
spec:
  selector:
    app: service-discovery
  ports:
    - port: 8761
      targetPort: 8761
  type: ClusterIP
